force-app/main/default/objects/Evidence_Turn__e/Evidence_Turn__e.object-meta.xml
<CustomObject>
    <description>Evidence-owned capture event, one per agent turn. Published PublishAfterCommit. See CONTRACT.md sec 3.</description>
    <label>Evidence Turn</label>
    <pluralLabel>Evidence Turns</pluralLabel>
</CustomObject>