force-app/main/default/objects/Evidence_Turn__e/fields/Actions_Invoked__c.field-meta.xml
<CustomField>
    <fullName>Actions_Invoked__c</fullName>
    <label>Actions Invoked</label>
    <description>JSON of the actions invoked with full input and output payloads.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>