force-app/main/default/objects/Evidence_Turn__e/fields/Declared_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Declared_Rationale__c</fullName>
    <label>Declared Rationale</label>
    <description>The agent's declared account of its reasoning for this turn.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>