force-app/main/default/objects/Evidence_Turn__e/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <label>Escalated To</label>
    <description>The queue or user the turn was escalated to, when escalated.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>