force-app/main/default/objects/Evidence_Turn__e/fields/Ledger_Key__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Key__c</fullName>
    <label>Ledger Key</label>
    <description>The key this turn will be written under in Decision_Ledger__b.</description>
    <type>Text</type>
    <length>60</length>
</CustomField>