force-app/main/default/objects/Evidence_Turn__e/fields/Policy_Evaluations__c.field-meta.xml
<CustomField>
    <fullName>Policy_Evaluations__c</fullName>
    <label>Policy Evaluations</label>
    <description>JSON of the policy checks evaluated during this turn.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>