force-app/main/default/objects/Evidence_Turn__e/fields/Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Session_Key__c</fullName>
    <label>Session Key</label>
    <description>Identifier of the agent session this turn belongs to.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>