force-app/main/default/objects/Evidence_Turn__e/fields/Sources_Read__c.field-meta.xml
<CustomField>
    <fullName>Sources_Read__c</fullName>
    <label>Sources Read</label>
    <description>JSON of the sources the agent read with relevance scores.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>