force-app/main/default/objects/Evidence_Turn__e/fields/Subject_Object__c.field-meta.xml
<CustomField>
    <fullName>Subject_Object__c</fullName>
    <label>Subject Object</label>
    <description>API name of the object the subject reference points to.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>