force-app/main/default/objects/Evidence_Turn__e/fields/Subject_Reference__c.field-meta.xml
<CustomField>
    <fullName>Subject_Reference__c</fullName>
    <label>Subject Reference</label>
    <description>Reference to the subject of the decision.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>