force-app/main/default/objects/Evidence_Turn__e/fields/Topics_Considered__c.field-meta.xml
<CustomField>
    <fullName>Topics_Considered__c</fullName>
    <label>Topics Considered</label>
    <description>JSON of the topics weighed with confidence scores.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>