force-app/main/default/objects/Evidence_Turn__e/fields/Variables_Set__c.field-meta.xml
<CustomField>
    <fullName>Variables_Set__c</fullName>
    <label>Variables Set</label>
    <description>JSON of the variables the agent set during this turn.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>